# pytorch

./: .gitignore  CMakeLists.txt
aten/src/ATen/core/dispatch/: Dispatcher.h
aten/src/ATen/native/: Copy.cpp
aten/src/ATen/pyre/: PyreFallback.cpp  PyreOp.h  PyreOpJit.cpp  PyreOpJit.h  PyreOps.cpp  PyreOps.h  PyreTensor.cpp  PyreTensor.h  PyreUtils.h
aten/src/ATen/pyre/dispatch/: PyreAbiConfig.cpp  PyreAbiConfig.h  PyreAbiGenerator.cpp  (+35 more)
aten/src/ATen/test/: CMakeLists.txt  pyre_strided_copy_plan_test.cpp
c10/: CMakeLists.txt
c10/core/: Device.cpp  DeviceType.cpp
c10/pyre/: CMakeLists.txt
c10/pyre/impl/: PyreDevice.cpp  PyreDevice.h  PyreDeviceCapabilities.cpp  PyreDeviceCapabilities.h  PyreGuardImpl.cpp  PyreGuardImpl.h  PyreHelpers.h  PyreRuntime.cpp  PyreRuntime.h  PyreStorage.cpp  PyreStorage.h  PyreStorageRegistration.cpp  PyreStream.cpp  PyreStream.h
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake  Summary.cmake
cmake/public/: pyre.cmake
test/pyre/: asan_repro.py  test_abi_generator.py  test_abi_packer.py  test_compiled_ops.py  test_compiler_cache.py  test_device.py  test_dispatch_infra.py  test_gpt_forward.py  test_gpu.py  test_index_ops.py  test_inplace_ops.py  test_kernel_compile.py  test_memory.py  test_mlp.py  test_mm_transposed.py  test_op_breadth.py  test_pending_cb.py  test_permuted_ops.py  test_pseudo_contiguous.py  test_streams.py  test_stride_audit.py
tools/: embed_templates.py
torch/: CMakeLists.txt  __init__.py
torch/csrc/: Module.cpp  Stream.cpp
torch/headeronly/macros/: Export.h
torch/pyre/: __init__.py  _device.py
(+22 files in other folders)
